--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
      - db
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-kyrixftw}
+      MAVEN_OPTS: -Xmx25000m
     entrypoint: sh -c 'sleep 5; /wait-for-postgres db:5432 -t 60 -- /start-kyrix.sh; tail -f /dev/null'
 
 #  adminer:
