--- a/Dockerfile-kyrix-alpine
+++ b/Dockerfile-kyrix-alpine
@@ -33,6 +33,8 @@ RUN sed -i 's/\(.\+equest\)/\/\/\1/g' node_modules/d3/build/d3.node.js
 ADD ./back-end /kyrix/back-end/
 WORKDIR /kyrix/back-end
 
+RUN MAVEN_OPTS=-Xmx4000m
+
 RUN mvn -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn compile | tee mvn-compile.out >/dev/null 2>&1
 RUN mvn -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn exec:java -Dexec.mainClass="main.Main" -Dexec.args="--immediate-shutdown"
 
